<resources>
    <string name="drawer_item_general">NDN OCR App</string>
    <string name="drawer_item_service">NDN service</string>
    <string name="drawer_item_faces">NDN Faces</string>
    <string name="drawer_item_routes">NDN Routes</string>
    <string name="drawer_item_strategies">Strategies</string>
    <string name="drawer_item_logcat">Logcat</string>
    <string name="drawer_item_settings">KEBAPP settings</string>
    <string name="picture">Take Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="app_name" translatable="false">NDN OCR App</string>
    <string name="ubicdn_name">NDN OCR Sample App </string>
    <string name="service_name">NDN Service</string>
    <string name="timer_wifi_waittime">Waiting time for WiFi connection</string>
    <string name="timer_wifi_peersuccess">Peer discovery restart time</string>
    <string name="timer_wifi_peerfailed">Peer discovery retry when failed</string>
    <string name="timer_wifi_servicesuccess">Service Discovery retry when failed</string>
    <string name="timer_wifi_servicefailed">Service Discovery restart time</string>
    <string name="timer_wifi_hsrestart">Hotspot mode restart time</string>
    <string name="timer_wifi_scan">Wifi scan duration</string>
    <string name="timer_bt_scan">Bluetooth scan duration</string>
    <string name="timer_bt_idle">Bluetooth idle time</string>
    <string name="timer_bt_advfg">Bluetooth adv time when foreground</string>
    <string name="timer_bt_advbg">Bluetooth adv time when background</string>
    <string name="checkbox_wifi">Enable WiFi Direct SD</string>
    <string name="checkbox_bt">Enable Bluetooth SD</string>
    <string name="list_name">News Channel</string>
    <string name="service_stopped">NFD is stopped</string>
    <string name="service_started">NFD is started</string>
    <string name="stopping_service">Stopping NFD …</string>
    <string name="starting_service">Starting NFD …</string>
    <string name="reconnect_to_service">Reconnecting to NFD Service …</string>
    <string name="loading_logger">Loading logger …</string>
    <string name="log_settings">Log Settings</string>
    <string name="checking_on_service">Checking on NFD Service …</string>
    <string name="checkbox_source">Enable source device</string>
    <string name="accessibility_open_drawer">Open NFD Navigation Drawer</string>
    <string name="accessibility_close_drawer">Close NFD Navigation Drawer</string>
    <string name="menu_item_delete_setting_item">Delete</string>
    <string name="fragment_logcat_general_operations_category">General Actions</string>
    <string name="fragment_logcat_tags_n_log_levels">Tags &amp; Log Levels</string>
    <string name="logcat_reset_log_level_defaults">Reset Log Level Defaults</string>
    <string name="reset_log_level_dialog_title">Select default value for all tags</string>
    <string name="route_list_actions_title">Route List Actions</string>
    <string name="oops">Oops!</string>
    <string name="error_cannot_communicate_with_service">Not available, check that NFD service is started</string>
    <string name="route_list_list_of_routes_title">List of Routes</string>
    <string name="route_list_refresh_route_list">Refresh Route List</string>
    <string name="route_list_add_route">Add Route</string>
    <string name="face_list_actions_title">Face List Actions</string>
    <string name="face_list_refresh_face_list">Refresh Face List</string>
    <string name="face_list_add_face">Add Face</string>
    <string name="face_list_list_of_faces_title">List of Faces</string>
    <string name="fragment_face_details_title">Face Details</string>
    <string name="menu_item_delete_face_item">Delete</string>
    <string name="expire_never">Never</string>
    <string name="face_id">Face ID</string>
    <string name="local_face_uri">Local FaceURI</string>
    <string name="remote_face_uri">Remote FaceURI</string>
    <string name="expires_in">Expires in</string>
    <string name="face_scope">Face scope</string>
    <string-array name="face_persistency">
        <item>Persistent</item>
        <item>On-demand</item>
        <item>Permanent</item>
    </string-array>
    <string name="link_type">Link type</string>
    <string name="in_interests">In interests</string>
    <string name="out_interests">Out interests</string>
    <string name="in_data">In data</string>
    <string name="out_data">Out data</string>
    <string name="in_bytes">In bytes</string>
    <string name="out_bytes">Out bytes</string>
    <string name="in_nacks">In NACKs</string>
    <string name="out_nacks">Out NACKs</string>
    <string name="main_bg_subtitle">Tap search to get started</string>
    <string name="view_count_text">%1$s views</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="no_player_found">No stream player found. Do you want to install VLC?</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="fdroid_vlc_url" translatable="false">https://f-droid.org/repository/browse/?fdfilter=vlc&amp;fdid=org.videolan.vlc</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_in_popup_mode">Open in popup mode</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean: %1$s ?</string>
    <string name="share_dialog_title">Share with</string>
    <string name="choose_browser">Choose browser</string>
    <string name="screen_rotation">rotation</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_video_player_summary">Some resolutions will NOT have audio when this option is enabled</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="popup_mode_share_menu_title">NewPipe popup mode</string>
    <string name="rss_button_title" translatable="false">RSS</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Unable to change subscription</string>
    <string name="subscription_update_failed">Unable to update subscription</string>
    <string name="tab_main">Main</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="fragment_whats_new">What\'s New</string>
    <string name="controls_background_title">Background</string>
    <string name="controls_popup_title">Popup</string>
    <string name="download_path_title">Video download path</string>
    <string name="download_path_summary">Path to store downloaded videos in</string>
    <string name="download_path_dialog_title">Enter download path for videos</string>
    <string name="download_path_audio_title">Audio download path</string>
    <string name="download_path_audio_summary">Path to store downloaded audio in</string>
    <string name="download_path_audio_dialog_title">Enter download path for audio files</string>
    <string name="autoplay_by_calling_app_title">Autoplay</string>
    <string name="autoplay_by_calling_app_summary">Automatically plays a video when NewPipe is called from another app</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_popup_resolution_title">Default popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolutions</string>
    <string name="show_higher_resolutions_summary">Only some devices support playing 2K/4K videos</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Kore app not found. Install it?</string>
    <string name="kore_package" translatable="false">org.xbmc.kore</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center</string>
    <string name="play_audio">Audio</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="default_video_format_title">Default video format</string>
    <string name="webm_description">WebM — free format</string>
    <string name="m4a_description">M4A — better quality</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="black_theme_title">Black</string>
    <string name="popup_remember_size_pos_title">Remember popup size and position</string>
    <string name="popup_remember_size_pos_summary">Remember last size and position of popup</string>
    <string name="player_gesture_controls_title">Player gesture controls</string>
    <string name="player_gesture_controls_summary">Use gestures to control the brightness and volume of the player</string>
    <string name="show_search_suggestions_title">Search suggestions</string>
    <string name="show_search_suggestions_summary">Show suggestions when searching</string>
    <string name="enable_search_history_title">Search history</string>
    <string name="enable_search_history_summary">Store search queries locally</string>
    <string name="enable_watch_history_title">History</string>
    <string name="enable_watch_history_summary">Keep track of watched videos</string>
    <string name="resume_on_audio_focus_gain_title">Resume on focus gain</string>
    <string name="resume_on_audio_focus_gain_summary">Continue playing after interruptions (e.g. phone calls)</string>
    <string name="download_dialog_title">Download</string>
    <string name="next_video_title">Next video</string>
    <string name="show_next_and_similar_title">Show next and similar videos</string>
    <string name="show_hold_to_append_title">Show Hold to Append Tip</string>
    <string name="show_hold_to_append_summary">Show tip when background or popup button is pressed on video details page</string>
    <string name="url_not_supported_toast">URL not supported</string>
    <string name="search_language_title">Default content language</string>
    <string name="settings_category_player_title">Player</string>
    <string name="settings_category_player_behavior_title">Behavior</string>
    <string name="settings_category_video_audio_title">Video &amp; Audio</string>
    <string name="settings_category_history_title">History</string>
    <string name="settings_category_popup_title">Popup</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_other_title">Other</string>
    <string name="background_player_playing_toast">Playing in background</string>
    <string name="popup_playing_toast">Playing in popup mode</string>
    <string name="background_player_append">Queued on background player</string>
    <string name="popup_playing_append">Queued on popup player</string>
    <string name="c3s_url" translatable="false">https://www.c3s.cc/</string>
    <string name="play_btn_text">Play</string>
    <string name="content">Content</string>
    <string name="show_age_restricted_content_title">Show age restricted content</string>
    <string name="video_is_age_restricted">Age Restricted Video. Allowing such material is possible from Settings.</string>
    <string name="duration_live">live</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_title">Downloads</string>
    <string name="error_report_title">Error report</string>
    <string name="all">All</string>
    <string name="channel">Channel</string>
</resources>